<resources>
    <string name="app_name">NYTimeSearch</string>
    <string name="action_settings">Settings</string>
    <string name="hint">Enter search query</string>
    <string name="search">Search</string>
    <string name="title_activity_article">ArticleActivity</string>
    <string name="title_activity_filter">FilterActivity</string>
    <string name="filter">Filters</string>
    <string name="start_date">Input Start Date:</string>
    <string name="date">YYYYMMDD</string>
    <string name="save">Save</string>
    <string name="order">Sort Order: </string>
    <string name="new_Desk">News Desk Values:</string>
    <string name="education">Education</string>
    <string name="arts">Arts</string>
    <string name="sports">Sports</string>
</resources>
