<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.lguti.nytimesearch.activites.FilterActivity"
    tools:showIn="@layout/activity_filter">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_date"
        android:id="@+id/tvDate"
        android:layout_gravity="center_vertical"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etDate"
        android:onClick="showDatePickerDialog"
        android:hint="@string/date"
        android:layout_gravity="center_vertical"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/tvDate"
        android:layout_toEndOf="@+id/tvDate" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/btnSave"
        android:onClick="OnSave"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="33dp"
        android:text="@string/order"
        android:id="@+id/tvOrder"
        android:layout_below="@+id/etDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="33dp"
        android:entries="@array/order_array"
        android:id="@+id/spinner"
        android:layout_below="@+id/etDate"
        android:layout_toRightOf="@+id/tvOrder"
        android:layout_toEndOf="@+id/tvOrder" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="60dp"
        android:text="@string/new_Desk"
        android:id="@+id/tvNews"
        android:layout_below="@+id/tvOrder"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/spinner"
        android:orientation="vertical"
        android:layout_toRightOf="@+id/etDate"
        android:layout_toEndOf="@+id/etDate">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/education"
            android:id="@+id/cbEducation"
            android:checked="false" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arts"
            android:id="@+id/cbArts"
            android:checked="false" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sports"
            android:id="@+id/cbSports"
            android:checked="false" />


    </LinearLayout>



</RelativeLayout>
